added buttons to HTML

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <title>Vertical Slider</title>
   </head>
   <body>
+      <div class="slider-container">
+          <div class="left-slide"></div>
+          <div class="right-slide"></div>
+          <div class="actions-buttons"></div>
+            <button class="down-button">
+                <i class="fas fa-arrow-down"></i>
+            </button>
+            <button class="up-button">
+                <i class="fas fa-arrow-up"></i>
+            </button>
+      </div>
     
     <script src="script.js"></script>
   </body>
