added nature slide style to HTML

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
   </head>
   <body>
       <div class="slider-container">
-          <div class="left-slide"></div>
+          <div class="left-slide">
+              <div>
+                  <div style="background-color:aquamarine">
+                  <h1>Nature</h1>
+                  <p>all in green</p>
+                  </div>
+              </div>
+          </div>
           <div class="right-slide"></div>
           <div class="actions-buttons"></div>
             <button class="down-button">
