added 3 other slider styles to HTML

--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
                   <h1>Nature</h1>
                   <p>all in green</p>
                   </div>
+                  <div style="background-color: lightskyblue">
+                  <h1>Waves</h1>
+                  <p>all in blue</p>
+                  </div>
+                  <div style="background-color:lightcoral">
+                  <h1>Strawberries</h1>
+                  <p>all in red</p>
+                  </div>
+                  <div style="background-color:lightgoldenrodyellow">
+                  <h1>Sun</h1>
+                  <p>all in yellow</p>
+                   </div>
               </div>
           </div>
           <div class="right-slide"></div>
