--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <body>
       <div class="slider-container">
           <div class="left-slide">
-              <div>
                   <div style="background-color:aquamarine">
                   <h1>Nature</h1>
                   <p>all in green</p>
@@ -27,9 +26,14 @@
                   <h1>Sun</h1>
                   <p>all in yellow</p>
                    </div>
-              </div>
-          </div>
-          <div class="right-slide"></div>
+            </div>
+        </div>
+          <div class="right-slide">
+              <div style="background-image: url('https://images.unsplash.com/photo-1574058764639-eac5c34947e9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=675&q=80')"></div>
+              <div style="background-image: url('https://images.unsplash.com/photo-1511804472014-fa7b871cd6a9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80')"></div>
+              <div style="background-image: url('https://images.unsplash.com/photo-1587393855524-087f83d95bc9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=697&q=80')"></div>
+              <div style="background-image: url('https://images.unsplash.com/photo-1563630381190-77c336ea545a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=636&q=80')"></div>
+
           <div class="actions-buttons"></div>
             <button class="down-button">
                 <i class="fas fa-arrow-down"></i>
