--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudfar.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudfare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link rel="stylesheet" href="style.css" />
     <title>Vertical Slider</title>
   </head>
@@ -33,15 +33,15 @@
               <div style="background-image: url('https://images.unsplash.com/photo-1511804472014-fa7b871cd6a9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80')"></div>
               <div style="background-image: url('https://images.unsplash.com/photo-1587393855524-087f83d95bc9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=697&q=80')"></div>
               <div style="background-image: url('https://images.unsplash.com/photo-1563630381190-77c336ea545a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=636&q=80')"></div>
-
-          <div class="actions-buttons"></div>
+          </div>
+          <div class="actions-buttons">
             <button class="down-button">
                 <i class="fas fa-arrow-down"></i>
             </button>
             <button class="up-button">
                 <i class="fas fa-arrow-up"></i>
             </button>
-      </div>
+           </div>
     
     <script src="script.js"></script>
   </body>
