resolved arrow icon url in HTML

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudfare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
     <link rel="stylesheet" href="style.css" />
     <title>Vertical Slider</title>
   </head>
@@ -25,9 +25,8 @@
                   <div style="background-color:lightgoldenrodyellow">
                   <h1>Sun</h1>
                   <p>all in yellow</p>
-                   </div>
+                  </div>
             </div>
-        </div>
           <div class="right-slide">
               <div style="background-image: url('https://images.unsplash.com/photo-1574058764639-eac5c34947e9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=675&q=80')"></div>
               <div style="background-image: url('https://images.unsplash.com/photo-1511804472014-fa7b871cd6a9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80')"></div>
@@ -42,7 +41,7 @@
                 <i class="fas fa-arrow-up"></i>
             </button>
            </div>
-    
+        </div>
     <script src="script.js"></script>
   </body>
 </html>
